# Egyptian-Property-Market-Pipeline

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements-etl.txt  requirements.txt
dags/: property_market_dag.py
data/: sample_listings.csv
sql/: analytics_queries.sql  schema.sql
src/egypt_property_pipeline/: __init__.py  config.py  database.py  load.py  scraper.py  transform.py
tests/: test_transform.py
