[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "egypt-property-pipeline"
version = "0.1.0"
description = "ETL pipeline for Egyptian property market listings"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
